fixed homebar gap

--- a/views/media/style.css
+++ b/views/media/style.css
@@ -82,9 +82,7 @@ body {
     width: 100%;
     height: auto;
     font-size: 1rem;
-    padding: 0.5rem, 1rem;
     position: relative;
-    top: 0rem;
     background-color: white;
 }
 
